Add no-use-before-define lint rule

--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
             "no-unmodified-loop-condition": "error",
             "no-unreachable-loop": "error",
             "no-unused-private-class-members": "error",
+            "no-use-before-define": "error",
             "object-curly-spacing": [ "error", "always" ],
             "prefer-const": [ "error", { "destructuring": "all" } ],
             "require-atomic-updates": "error",
